--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 body{
     background-color: var(--secondary-color);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    max-width: 100%;
     overflow-x: hidden;
 }
 
