--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 body{
     background-color: var(--secondary-color);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    max-width: 100%;
+    width: 100%;
     overflow-x: hidden;
 }
 
@@ -16,6 +16,8 @@ header{
     position: absolute;
     top:0;
     margin:0;
+    width:100%;
+    overflow-x:hidden;
 }
 
 /* Jumbotron */
